[gd_scene load_steps=9 format=2]

[ext_resource path="res://AssetsSK/IMG_0319.PNG" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://AssetsSK/Player_Walk3.PNG" type="Texture" id=3]
[ext_resource path="res://AssetsSK/Player_Walk1.PNG" type="Texture" id=4]
[ext_resource path="res://AssetsSK/Player_Walk2.PNG" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "Walk_Run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 29 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 1, -32 )
collision_mask = 10
script = ExtResource( 2 )
gravity = 500.0

[node name="Walk_Left" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 1 )
playing = true
flip_h = true

[node name="Walk_Right" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
animation = "Walk_Run"
frame = 5
playing = true

[node name="Jump_Left" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
flip_h = true

[node name="Jump_Right" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="Idle_Front" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 3 )
current = true
limit_left = 0
limit_top = 0
limit_right = 9900
limit_bottom = 3500
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="BootAudio" type="AudioStreamPlayer" parent="."]

[node name="JumpAudio" type="AudioStreamPlayer" parent="."]
volume_db = -15.0
